Update UI done some section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
     <div class="col-12">
       <app-errors></app-errors>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Total number of recipients </h5>
         <div class="justify-content-between align-items-end d-flex">
@@ -34,7 +34,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Total certificates released </h5>
         <div class="justify-content-between align-items-end d-flex">
@@ -47,7 +47,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Total emails sent </h5>
         <div class="justify-content-between align-items-end d-flex">
@@ -60,7 +60,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Recipients added this month </h5>
         <div class="justify-content-between align-items-end d-flex">
@@ -73,7 +73,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Certificates released this month </h5>
         <div class="justify-content-between align-items-end d-flex">
@@ -86,7 +86,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-6">
       <mat-card>
         <h5 class="card-text"> Emails sent this month </h5>
         <div class="justify-content-between align-items-end d-flex">
