--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -226,5 +226,10 @@ body {
  opacity: 1;
 }
 
+@media(max-width:766px){
+  ::ng-deep .mat-tab-label-container{
+    margin-left: 0 !important;
+  }
+}
 
 
