--- a/src/app/components/recipients/recipients.component.css
+++ b/src/app/components/recipients/recipients.component.css
@@ -155,6 +155,9 @@ a.view-link {
 }
 
 @media (max-width: 677px) {
+  .search-area{
+    padding: 20px;
+  }
   .button-group{
     flex-wrap: wrap;
   }
