--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -102,60 +102,62 @@
          <mat-tab-group class="mat-group-content" [selectedIndex]="selectedTab" (selectedTabChange)="handleTabChange($event)">
            <mat-tab label="Tags ({{tagsPage.totalElements}})" >
              <form [formGroup]="tagsForm">
-               <div class="table-container">
-                 <table
-                 matSort 
-                 (matSortChange)="sortData($event, 'tags')"  
-                 mat-table [dataSource]="dataSource" class="table hoverEffect table-header table-bordered table-rounded">
-                   <ng-container matColumnDef="name">
-                     <th mat-header-cell *matHeaderCellDef>
-                       <h6>Tags</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
-                   </ng-container>
-                   <ng-container matColumnDef="no_of_recipients">
-                     <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_recipients">
-                       <h6>Recipients </h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">
-                       {{element.no_of_recipients}} </td>
-                   </ng-container>
-                   <ng-container matColumnDef="last_used">
-                     <th mat-header-cell *matHeaderCellDef mat-sort-header="last_used_on">
-                       <h6>Last Used</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">
-                       {{element.last_used_on|dateAgo}}
-                     </td>
-                   </ng-container>
-                   <ng-container matColumnDef="created_on">
-                     <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
-                       <h6>Created On</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">
-                       {{element.created_at|dateAgo}} </td>
-                   </ng-container>
- 
-                   <ng-container  matColumnDef="view_users">
-                     <th mat-header-cell *matHeaderCellDef>
-                       
-                     </th>
-                     <td mat-cell class="hover_details" *matCellDef="let element">
-                         <ul class="actiion_list">
-                           <li>
-                             <a [routerLink]="" (click)="updateTag(element.id)" class="btn-orange-outline-border">Update</a>
-                           </li>
-                           <li>
-                             <a (click)="loader = true" [routerLink]="'/Recipients/'+element.id" [queryParams]="{name:element.name}" class="btn-orange-outline-border">View Recipients</a>
-                           </li>
-                         </ul>
-                     </td>
-                   </ng-container>
- 
-                   <tr mat-header-row *matHeaderRowDef="displayedColumnsTags"></tr>
-                   <tr mat-row *matRowDef="let row; columns: displayedColumnsTags;" (click)="clicked(row)">
-                   </tr>
-                 </table>
+               <div class="table-container ">
+                 <div class="table_overflow">
+                  <table
+                  matSort 
+                  (matSortChange)="sortData($event, 'tags')"  
+                  mat-table [dataSource]="dataSource" class="table hoverEffect table-header table-bordered table-rounded">
+                    <ng-container matColumnDef="name">
+                      <th mat-header-cell *matHeaderCellDef>
+                        <h6>Tags</h6>
+                      </th>
+                      <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="no_of_recipients">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_recipients">
+                        <h6>Recipients </h6>
+                      </th>
+                      <td mat-cell *matCellDef="let element let rowIndex = index">
+                        {{element.no_of_recipients}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="last_used">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="last_used_on">
+                        <h6>Last Used</h6>
+                      </th>
+                      <td mat-cell *matCellDef="let element let rowIndex = index">
+                        {{element.last_used_on|dateAgo}}
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="created_on">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
+                        <h6>Created On</h6>
+                      </th>
+                      <td mat-cell *matCellDef="let element let rowIndex = index">
+                        {{element.created_at|dateAgo}} </td>
+                    </ng-container>
+  
+                    <ng-container  matColumnDef="view_users">
+                      <th mat-header-cell *matHeaderCellDef>
+                        
+                      </th>
+                      <td mat-cell class="hover_details" *matCellDef="let element">
+                          <ul class="actiion_list">
+                            <li>
+                              <a [routerLink]="" (click)="updateTag(element.id)" class="btn-orange-outline-border">Update</a>
+                            </li>
+                            <li>
+                              <a (click)="loader = true" [routerLink]="'/Recipients/'+element.id" [queryParams]="{name:element.name}" class="btn-orange-outline-border">View Recipients</a>
+                            </li>
+                          </ul>
+                      </td>
+                    </ng-container>
+  
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsTags"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsTags;" (click)="clicked(row)">
+                    </tr>
+                  </table>
+                 </div>
                  <app-custom-pagination
                    [page]="tagsPage"
                    (nextPageEvent)="getNextTagsPage()"
@@ -167,65 +169,67 @@
            <mat-tab label="Fields ({{fieldsPage.totalElements}})">
              <form [formGroup]="fieldsForm">
                <div class="table-container">
-                 <table
-                 matSort 
-                 (matSortChange)="sortData($event, 'fields')"  
-                 mat-table 
-                 [dataSource]="fieldsDataSource" 
-                 class="table hoverEffect table-header table-bordered table-rounded">
-                   <ng-container matColumnDef="fields">
-                     <th mat-header-cell *matHeaderCellDef>
-                       <h6>Fields</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
-                   </ng-container>
-                   <ng-container matColumnDef="created_on">
-                     <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
-                       <h6>Created On</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.created_at|dateAgo}}</td>
- 
-                   </ng-container>
-                   <ng-container matColumnDef="recipients_filled">
-                     <th mat-header-cell *matHeaderCellDef>
-                       <h6>Recipients filled</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_filled}}</td>
-                   </ng-container>
- 
-                   <ng-container matColumnDef="recipients_empty">
-                     <th mat-header-cell *matHeaderCellDef>
-                       <h6>Recipients empty</h6>
-                     </th>
-                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_empty}}</td>
-                   </ng-container>
- 
-                   <ng-container matColumnDef="view_users">
-                     <th mat-header-cell *matHeaderCellDef>
-                       
-                     </th>
-                     <td mat-cell class="hover_details" *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
-                           <ul class="actiion_list">
-                             <li>
-                               <a
-                                 mwlConfirmationPopover
-                                 [popoverTitle]="fieldDeletePopoverTitle"
-                                 [popoverMessage]="fieldDeletePopoverMessage"
-                                 placement="left"
-                                 (confirm)="deleteField(element.id)"
-                                 class="btn-orange-outline-border">Delete</a>
-                             </li>
-                             <li>
-                               <a class="btn-orange-outline-border" (click)="updateField(element.id)">Update</a>
-                             </li>
-                           </ul>
-                       </td>
-                   </ng-container>
- 
-                   <tr mat-header-row *matHeaderRowDef="displayedColumnsFields"></tr>
-                   <tr mat-row *matRowDef="let row; columns: displayedColumnsFields;" (click)="clicked(row)">
-                   </tr>
-                 </table>
+                  <div class="table_overflow">
+                    <table
+                    matSort 
+                    (matSortChange)="sortData($event, 'fields')"  
+                    mat-table 
+                    [dataSource]="fieldsDataSource" 
+                    class="table hoverEffect table-header table-bordered table-rounded">
+                      <ng-container matColumnDef="fields">
+                        <th mat-header-cell *matHeaderCellDef>
+                          <h6>Fields</h6>
+                        </th>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
+                      </ng-container>
+                      <ng-container matColumnDef="created_on">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
+                          <h6>Created On</h6>
+                        </th>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.created_at|dateAgo}}</td>
+    
+                      </ng-container>
+                      <ng-container matColumnDef="recipients_filled">
+                        <th mat-header-cell *matHeaderCellDef>
+                          <h6>Recipients filled</h6>
+                        </th>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_filled}}</td>
+                      </ng-container>
+    
+                      <ng-container matColumnDef="recipients_empty">
+                        <th mat-header-cell *matHeaderCellDef>
+                          <h6>Recipients empty</h6>
+                        </th>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_empty}}</td>
+                      </ng-container>
+    
+                      <ng-container matColumnDef="view_users">
+                        <th mat-header-cell *matHeaderCellDef>
+                          
+                        </th>
+                        <td mat-cell class="hover_details" *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
+                              <ul class="actiion_list">
+                                <li>
+                                  <a
+                                    mwlConfirmationPopover
+                                    [popoverTitle]="fieldDeletePopoverTitle"
+                                    [popoverMessage]="fieldDeletePopoverMessage"
+                                    placement="left"
+                                    (confirm)="deleteField(element.id)"
+                                    class="btn-orange-outline-border">Delete</a>
+                                </li>
+                                <li>
+                                  <a class="btn-orange-outline-border" (click)="updateField(element.id)">Update</a>
+                                </li>
+                              </ul>
+                          </td>
+                      </ng-container>
+    
+                      <tr mat-header-row *matHeaderRowDef="displayedColumnsFields"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumnsFields;" (click)="clicked(row)">
+                      </tr>
+                    </table>
+                  </div>
                  <app-custom-pagination
                    [page]="fieldsPage"
                    (nextPageEvent)="getNextFieldsPage()"
